[package]
name = "graphlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.4", features = ["serde"] }
binary-heap-plus = "0.4.1"
compare = "0.1.0"
dyn-clone = "1.0.4"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
fixedbitset = "0.4.0"
lp-modeler = { git = "https://github.com/jcavat/rust-lp-modeler" }
log = "0.4.11"
rayon = "1.5.0"
chrono = "0.4.19"
fibheap = { git = "https://github.com/Mountlex/fibheap.git", branch = "main" }
rustc-hash = "1.1.0"
roxmltree = "0.14.1"
good_lp = {version= "1.3.1"}
itertools = "0.10.3"
bincode = "1.3.3"
anyhow = "1.0.53"